Aspectos SEO menos etiqueta Google

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/tendenciasDevICO.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tendenciasDev</title>
+    <title>tendenciasDev - Jon Juárez</title>
+    <meta
+      name="description"
+      content="Datos medios de las tecnologías que más se ofertan calculados a partir de los ultimos 28 dias de LinkedIn"
+    />
   </head>
   <body>
     <div id="root"></div>
