Meter codigo de Google

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Datos medios de las tecnologías que más se ofertan calculados a partir de los ultimos 28 dias de LinkedIn"
     />
+    <meta
+      name="google-site-verification"
+      content="a6enoLXqi24DHuEYBTXSwq3_fNim6xLi42cyFw-LVn8"
+    />
   </head>
   <body>
     <div id="root"></div>
